ipc/ipdl/test/ipdl/ok/Pactorreturn.ipdl
[ChildProc=any]
sync protocol Pactorreturn {

parent:
    sync Msg(Pactorreturn p) returns (Pactorreturn r);

};
